<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.SaveGetKeyActivity">

    <TextView
        android:id="@+id/titleSaveGetKeyView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_biz_name_weight"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#ABCDEF"
        android:fontFamily="@font/amiko"
        android:gravity="center"
        android:text="@string/save_key_title_biz_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/title_biz_name_font_size" />

    <ImageView
        android:id="@+id/returnImageView"
        android:layout_width="@dimen/button_return_width"
        android:layout_height="@dimen/button_return_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:onClick="onReturnActivity"
        app:srcCompat="@drawable/return_01_70x70"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="@dimen/title_biz_name_weight"
        android:layout_height="@dimen/button_return_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:textColor="@color/colorOperateSuccess"
        android:textSize="@dimen/tip_main_font_size" />

    <LinearLayout
        android:id="@+id/qrCodeLayerLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_below="@+id/titleSaveGetKeyView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:textAlignment="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/qrCodeLinearLayout"
            android:layout_width="401dp"
            android:layout_height="256dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/door_open_success"
                android:textColor="@color/colorOperateSuccess"
                android:textSize="@dimen/title_biz_name_font_size"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/qrCodeImageView"
                android:layout_width="@dimen/qr_code_width"
                android:layout_height="@dimen/qr_code_height"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:textAlignment="center"
                android:visibility="visible"
                app:srcCompat="@mipmap/cabinet_logo_72" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/copyright" />

</RelativeLayout>