<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.MainActivity" >

    <TextView
        android:id="@+id/titleFirstView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_biz_name_weight"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#ABCDEF"
        android:fontFamily="@font/amiko"
        android:gravity="center"
        android:text="@string/index_title_biz_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/title_biz_name_font_size" />

    <LinearLayout
        android:id="@+id/saveGetLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/saveKeyCardView"
                android:layout_width="220dp"
                android:layout_height="150dp"
                app:cardBackgroundColor="@color/saveBizBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/saveKeyTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/saveKeyCardView"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:onClick="onOpenSaveKeyPageClick"
                    android:text="@string/index_biz_save_key_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="36sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/managerCV"
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:gravity="center"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@color/managerColorBackground"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/getKeyTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:onClick="onOpenGetKeyPageClick"
                    android:text="@string/index_biz_get_key_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="36sp" />

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView
                android:id="@+id/getKeyCardView"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_alignStart="@+id/titleFirstView"
                android:layout_alignLeft="@+id/titleFirstView"
                android:layout_alignTop="@+id/titleFirstView"
                app:cardBackgroundColor="@color/bizBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="管理员"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    android:textSize="30sp" />
            </android.support.v7.widget.CardView>-->
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/copyright" />

    <!--<LinearLayout
        android:id="@+id/managerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_below="@+id/saveGetLinerLayout"
        android:layout_marginTop="-12dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>
    </LinearLayout>-->

</RelativeLayout>